fix bottom margon on smaller screen. css fixes on menubutton

--- a/public/css/smallscreenstyle.css
+++ b/public/css/smallscreenstyle.css
@@ -11,12 +11,15 @@
     .content{
       width: 100%;
     }
+    .content-body{
+    margin-bottom:40px;
+    }
+
     .smallscreenmenu{
       display: inline-block;
-      background-color: #fff;
+      background-color: rgb(109, 108, 104);
       position: fixed;
       border: 1px solid;
-      
       margin: 0px auto 31px auto;
       bottom: 0px;
       left: 0px;
@@ -25,17 +28,21 @@
     }
     .menuitems{
       display: inline;
+      background-color: rgb(109, 108, 104);
+      color: #000;
       width: 30%;
       float: left;
-      border: 1px solid;
+      border: 2px solid;
+      border-color: rgb(96, 95, 90);;
       text-align: center;
       padding-top: 10px;
       padding-bottom: 10px;
-      
+      margin: 0px 5px;
     }
     .menuitems a{
       text-decoration: none;
     }
+
   }
 
   @media only screen and (max-width: 850px) {
